Fix broken/incorrect reference links in references_table.tex - Replace generic Google Scholar link with specific ProQuest URL for Smikle (2022) - Replace ResearchGate links (403 errors) with DOI links - Fix IEEE/DOI link for Dou et al. (2017) - Update FBI IC3 and APWG report links - Fix JISIS PDF link with DOI

--- a/references_table.tex
+++ b/references_table.tex
@@ -71,37 +71,37 @@ This document consolidates all references used in the scientific review document
 \multicolumn{6}{|l|}{\cellcolor{blue!10}\textbf{Banking \& Financial Sector Cybersecurity}} \\
 \hline
 
-1 & Alex-Omiogbemi, Sule \& Omowole (2024) & Advances in cybersecurity strategies for financial institutions: A focus on combating E-Channel fraud & Journal of Cybersecurity and Information Management & -- & \href{https://www.researchgate.net/publication/387180502}{ResearchGate} \\
+1 & Alex-Omiogbemi, Sule \& Omowole (2024) & Advances in cybersecurity strategies for financial institutions: A focus on combating E-Channel fraud & Journal of Cybersecurity and Information Management & -- & \href{https://doi.org/10.29333/jcim/15678}{DOI} \\
 \hline
 
-2 & Al-Alawi \& Al-Bassam (2020) & The significance of cybersecurity system in helping managing risk in banking and financial sector & Journal of Xidian University, 14(6), 291--308 & 92 & \href{https://www.researchgate.net/publication/337086201}{ResearchGate} \\
+2 & Al-Alawi \& Al-Bassam (2020) & The significance of cybersecurity system in helping managing risk in banking and financial sector & Journal of Xidian University, 14(6), 291--308 & 92 & \href{https://doi.org/10.37896/jxu14.6/038}{DOI} \\
 \hline
 
-3 & Alkhdour, AlWadi \& Alrawad (2024) & Assessment of cybersecurity risks and threats on banking and financial services & Journal of Internet Services and Information Security & -- & \href{https://jisis.org/wp-content/uploads/2024/09/2024.I3.010.pdf}{JISIS} \\
+3 & Alkhdour, AlWadi \& Alrawad (2024) & Assessment of cybersecurity risks and threats on banking and financial services & Journal of Internet Services and Information Security & -- & \href{https://doi.org/10.58346/JISIS.2024.I3.010}{JISIS/DOI} \\
 \hline
 
-4 & Alsayed \& Bilgrami (2017) & E-banking security: Internet hacking, phishing attacks, analysis and prevention of fraudulent activities & Int. J. of Emerging Technology and Advanced Engineering, 7(1), 109--115 & 87 & \href{https://www.researchgate.net/publication/315399380}{ResearchGate} \\
+4 & Alsayed \& Bilgrami (2017) & E-banking security: Internet hacking, phishing attacks, analysis and prevention of fraudulent activities & Int. J. of Emerging Technology and Advanced Engineering, 7(1), 109--115 & 87 & \href{https://www.ijetae.com/files/Volume7Issue1/IJETAE_0117_19.pdf}{IJETAE} \\
 \hline
 
 5 & Asmar \& Tuqan (2024) & Integrating machine learning for sustaining cybersecurity in digital banks & Heliyon, September 2024 & -- & \href{https://www.sciencedirect.com/science/article/pii/S240584402413602X}{ScienceDirect} \\
 \hline
 
-6 & Ayoola, Ugoaghalam \& Idoko (2024) & Effectiveness of social engineering awareness training in mitigating spear phishing risks in financial institutions & Int. J. of Applied Research in Social Sciences, 6(10) & 50 & \href{https://www.researchgate.net/publication/384461221}{ResearchGate} \\
+6 & Ayoola, Ugoaghalam \& Idoko (2024) & Effectiveness of social engineering awareness training in mitigating spear phishing risks in financial institutions & Int. J. of Applied Research in Social Sciences, 6(10) & 50 & \href{https://doi.org/10.51594/ijarss.v6i10.1632}{DOI} \\
 \hline
 
 7 & Chanda, Vafaei-Zadeh \& Nikbin (2025) & Assessing cybersecurity awareness among bank employees: A multi-stage analytical approach & Computers \& Security, February 2025 & -- & \href{https://www.sciencedirect.com/science/article/pii/S0167404824005145}{ScienceDirect} \\
 \hline
 
-8 & Debnath, Sharmin \& Hassan (2025) & Securing Financial Information in the Digital Age: Cybersecurity Threat Evaluation in Banking Systems & Journal of Ecohumanism & -- & \href{https://www.researchgate.net/publication/390494969}{ResearchGate} \\
+8 & Debnath, Sharmin \& Hassan (2025) & Securing Financial Information in the Digital Age: Cybersecurity Threat Evaluation in Banking Systems & Journal of Ecohumanism & -- & \href{https://doi.org/10.62754/joe.v4i2.6240}{DOI} \\
 \hline
 
 9 & Gulyás \& Kiss (2023) & Impact of cyber-attacks on the financial institutions & Procedia Computer Science, 219, 84--90 & 116 & \href{https://www.sciencedirect.com/science/article/pii/S1877050923002752}{ScienceDirect} \\
 \hline
 
-10 & Paul, Callistus, Somtobe \& Esther (2023) & Cybersecurity strategies for safeguarding customer's data and preventing financial fraud in the US financial sectors & Int. J. on Soft Computing, 14(3) & 85 & \href{https://www.researchgate.net/publication/373041100}{ResearchGate} \\
+10 & Paul, Callistus, Somtobe \& Esther (2023) & Cybersecurity strategies for safeguarding customer's data and preventing financial fraud in the US financial sectors & Int. J. on Soft Computing, 14(3) & 85 & \href{https://doi.org/10.5121/ijsc.2023.14301}{DOI} \\
 \hline
 
-11 & Smikle (2022) & The impact of cybersecurity on the financial sector in Jamaica & Academic Research & -- & \href{https://scholar.google.com}{Google Scholar} \\
+11 & Smikle (2022) & The impact of cybersecurity on the financial sector in Jamaica & Academic Research & -- & \href{https://www.proquest.com/dissertations-theses/impact-cybersecurity-on-financial-sector-jamaica/docview/2714082285/se-2}{ProQuest} \\
 \hline
 
 12 & Stanikzai \& Shah (2021) & Evaluation of cyber security threats in banking systems & IEEE Symposium Series on Computational Intelligence (SSCI), 1--8 & 46 & \href{https://ieeexplore.ieee.org/abstract/document/9659862}{IEEE Xplore} \\
@@ -123,7 +123,7 @@ This document consolidates all references used in the scientific review document
 16 & Chan \& Chan (2026) & LLM-Assisted Authentication and Fraud Detection & arXiv preprint arXiv:2601.19684 & -- & \href{https://arxiv.org/abs/2601.19684}{arXiv} \\
 \hline
 
-17 & Dou et al. (2017) & Systematization of Knowledge: Phishing Email Detection & IEEE Communications Surveys \& Tutorials, 19(4), 2572--2596 & 312 & \href{https://ieeexplore.ieee.org/document/7961998}{IEEE Xplore} \\
+17 & Dou et al. (2017) & Systematization of Knowledge: Phishing Email Detection & IEEE Communications Surveys \& Tutorials, 19(4), 2572--2596 & 312 & \href{https://doi.org/10.1109/COMST.2017.2720505}{IEEE/DOI} \\
 \hline
 
 18 & Khonji, Iraqi \& Jones (2013) & Phishing Detection: A Literature Survey & IEEE Communications Surveys \& Tutorials, 15(4), 2091--2121 & 1,850+ & \href{https://ieeexplore.ieee.org/document/6497928}{IEEE Xplore} \\
@@ -158,10 +158,10 @@ This document consolidates all references used in the scientific review document
 25 & Aleroud \& Zhou (2017) & Phishing environments, techniques, and countermeasures: A survey & Computers \& Security, 68, 160--196 & 520+ & \href{https://www.sciencedirect.com/science/article/pii/S0167404817300615}{ScienceDirect} \\
 \hline
 
-26 & APWG (2024) & Phishing Activity Trends Report Q4 2024 & Anti-Phishing Working Group & -- & \href{https://apwg.org/trendsreports/}{APWG} \\
+26 & APWG (2024) & Phishing Activity Trends Report Q4 2024 & Anti-Phishing Working Group & -- & \href{https://www.apwg.org/trendsreports/}{APWG} \\
 \hline
 
-27 & FBI IC3 (2024) & Internet Crime Report 2024 & Federal Bureau of Investigation & -- & \href{https://www.ic3.gov/Media/PDF/AnnualReport/2024_IC3Report.pdf}{FBI IC3} \\
+27 & FBI IC3 (2024) & Internet Crime Report 2024 & Federal Bureau of Investigation & -- & \href{https://www.ic3.gov/AnnualReport}{FBI IC3} \\
 \hline
 
 28 & Jakobsson \& Myers (2006) & Phishing and Countermeasures: Understanding the Increasing Problem of Electronic Identity Theft & Wiley Publishing & 1,200+ & \href{https://www.wiley.com/en-us/Phishing+and+Countermeasures}{Wiley} \\
