Fix broken/incorrect links in references table
- Reference #1: Replaced broken DOI with ResearchGate link for Alex-Omiogbemi article
- Reference #2: Replaced broken DOI with ResearchGate link for Al-Alawi article
- Reference #20: Fixed WRONG article link - was pointing to fingerprint detection paper, now correctly links to Sahingoz phishing detection paper (S0957417418306067)

All verified links now correctly match their stated titles and authors.

--- a/references_table.tex
+++ b/references_table.tex
@@ -71,10 +71,10 @@ This document consolidates all references used in the scientific review document
 \multicolumn{6}{|l|}{\cellcolor{blue!10}\textbf{Banking \& Financial Sector Cybersecurity}} \\
 \hline
 
-1 & Alex-Omiogbemi, Sule \& Omowole (2024) & Advances in cybersecurity strategies for financial institutions: A focus on combating E-Channel fraud & Journal of Cybersecurity and Information Management & -- & \href{https://doi.org/10.29333/jcim/15678}{DOI} \\
+1 & Alex-Omiogbemi, Sule \& Omowole (2024) & Advances in cybersecurity strategies for financial institutions: A focus on combating E-Channel fraud & Journal of Cybersecurity and Information Management & -- & \href{https://www.researchgate.net/publication/387180502_Advances_in_cybersecurity_strategies_for_financial_institutions_A_focus_on_combating_E-Channel_fraud_in_the_Digital_era}{ResearchGate} \\
 \hline
 
-2 & Al-Alawi \& Al-Bassam (2020) & The significance of cybersecurity system in helping managing risk in banking and financial sector & Journal of Xidian University, 14(6), 291--308 & 92 & \href{https://doi.org/10.37896/jxu14.6/038}{DOI} \\
+2 & Al-Alawi \& Al-Bassam (2020) & The significance of cybersecurity system in helping managing risk in banking and financial sector & Journal of Xidian University, 14(6), 291--308 & 92 & \href{https://www.researchgate.net/publication/337086201_The_Significance_of_Cybersecurity_System_in_Helping_Managing_Risk_in_Banking_and_Financial_Sector}{ResearchGate} \\
 \hline
 
 3 & Alkhdour, AlWadi \& Alrawad (2024) & Assessment of cybersecurity risks and threats on banking and financial services & Journal of Internet Services and Information Security & -- & \href{https://doi.org/10.58346/JISIS.2024.I3.010}{JISIS/DOI} \\
@@ -132,7 +132,7 @@ This document consolidates all references used in the scientific review document
 19 & Opara, Modesti \& Golightly (2025) & Evaluating spam filters and Stylometric Detection of AI-generated phishing emails & Expert Systems with Applications, June 2025 & -- & \href{https://www.sciencedirect.com/science/article/pii/S0957417425006669}{ScienceDirect} \\
 \hline
 
-20 & Sahingoz et al. (2019) & Machine learning based phishing detection from URLs & Expert Systems with Applications, 117, 345--357 & 890+ & \href{https://www.sciencedirect.com/science/article/pii/S0957417418305694}{ScienceDirect} \\
+20 & Sahingoz et al. (2019) & Machine learning based phishing detection from URLs & Expert Systems with Applications, 117, 345--357 & 890+ & \href{https://www.sciencedirect.com/science/article/pii/S0957417418306067}{ScienceDirect} \\
 \hline
 
 % AI & Emerging Threats
