Replace all broken DOI links with working alternatives
- Ref #3: JISIS DOI → direct JISIS PDF link
- Ref #6: IJARSS DOI → ResearchGate publication page
- Ref #8: Ecohumanism DOI → ResearchGate publication page
- Ref #10: IJSC DOI → ResearchGate publication page
- Ref #17: IEEE DOI → IEEE Xplore document link

All links now verified working.

--- a/references_table.tex
+++ b/references_table.tex
@@ -77,7 +77,7 @@ This document consolidates all references used in the scientific review document
 2 & Al-Alawi \& Al-Bassam (2020) & The significance of cybersecurity system in helping managing risk in banking and financial sector & Journal of Xidian University, 14(6), 291--308 & 92 & \href{https://www.researchgate.net/publication/337086201_The_Significance_of_Cybersecurity_System_in_Helping_Managing_Risk_in_Banking_and_Financial_Sector}{ResearchGate} \\
 \hline
 
-3 & Alkhdour, AlWadi \& Alrawad (2024) & Assessment of cybersecurity risks and threats on banking and financial services & Journal of Internet Services and Information Security & -- & \href{https://doi.org/10.58346/JISIS.2024.I3.010}{JISIS/DOI} \\
+3 & Alkhdour, AlWadi \& Alrawad (2024) & Assessment of cybersecurity risks and threats on banking and financial services & Journal of Internet Services and Information Security & -- & \href{https://jisis.org/wp-content/uploads/2024/09/2024.I3.010.pdf}{JISIS PDF} \\
 \hline
 
 4 & Alsayed \& Bilgrami (2017) & E-banking security: Internet hacking, phishing attacks, analysis and prevention of fraudulent activities & Int. J. of Emerging Technology and Advanced Engineering, 7(1), 109--115 & 87 & \href{https://www.ijetae.com/files/Volume7Issue1/IJETAE_0117_19.pdf}{IJETAE} \\
@@ -86,19 +86,19 @@ This document consolidates all references used in the scientific review document
 5 & Asmar \& Tuqan (2024) & Integrating machine learning for sustaining cybersecurity in digital banks & Heliyon, September 2024 & -- & \href{https://www.sciencedirect.com/science/article/pii/S240584402413602X}{ScienceDirect} \\
 \hline
 
-6 & Ayoola, Ugoaghalam \& Idoko (2024) & Effectiveness of social engineering awareness training in mitigating spear phishing risks in financial institutions & Int. J. of Applied Research in Social Sciences, 6(10) & 50 & \href{https://doi.org/10.51594/ijarss.v6i10.1632}{DOI} \\
+6 & Ayoola, Ugoaghalam \& Idoko (2024) & Effectiveness of social engineering awareness training in mitigating spear phishing risks in financial institutions & Int. J. of Applied Research in Social Sciences, 6(10) & 50 & \href{https://www.researchgate.net/publication/384461221}{ResearchGate} \\
 \hline
 
 7 & Chanda, Vafaei-Zadeh \& Nikbin (2025) & Assessing cybersecurity awareness among bank employees: A multi-stage analytical approach & Computers \& Security, February 2025 & -- & \href{https://www.sciencedirect.com/science/article/pii/S0167404824005145}{ScienceDirect} \\
 \hline
 
-8 & Debnath, Sharmin \& Hassan (2025) & Securing Financial Information in the Digital Age: Cybersecurity Threat Evaluation in Banking Systems & Journal of Ecohumanism & -- & \href{https://doi.org/10.62754/joe.v4i2.6240}{DOI} \\
+8 & Debnath, Sharmin \& Hassan (2025) & Securing Financial Information in the Digital Age: Cybersecurity Threat Evaluation in Banking Systems & Journal of Ecohumanism & -- & \href{https://www.researchgate.net/publication/390494969}{ResearchGate} \\
 \hline
 
 9 & Gulyás \& Kiss (2023) & Impact of cyber-attacks on the financial institutions & Procedia Computer Science, 219, 84--90 & 116 & \href{https://www.sciencedirect.com/science/article/pii/S1877050923002752}{ScienceDirect} \\
 \hline
 
-10 & Paul, Callistus, Somtobe \& Esther (2023) & Cybersecurity strategies for safeguarding customer's data and preventing financial fraud in the US financial sectors & Int. J. on Soft Computing, 14(3) & 85 & \href{https://doi.org/10.5121/ijsc.2023.14301}{DOI} \\
+10 & Paul, Callistus, Somtobe \& Esther (2023) & Cybersecurity strategies for safeguarding customer's data and preventing financial fraud in the US financial sectors & Int. J. on Soft Computing, 14(3) & 85 & \href{https://www.researchgate.net/publication/373041100}{ResearchGate} \\
 \hline
 
 11 & Smikle (2022) & The impact of cybersecurity on the financial sector in Jamaica & Academic Research & -- & \href{https://www.proquest.com/dissertations-theses/impact-cybersecurity-on-financial-sector-jamaica/docview/2714082285/se-2}{ProQuest} \\
@@ -123,7 +123,7 @@ This document consolidates all references used in the scientific review document
 16 & Chan \& Chan (2026) & LLM-Assisted Authentication and Fraud Detection & arXiv preprint arXiv:2601.19684 & -- & \href{https://arxiv.org/abs/2601.19684}{arXiv} \\
 \hline
 
-17 & Dou et al. (2017) & Systematization of Knowledge: Phishing Email Detection & IEEE Communications Surveys \& Tutorials, 19(4), 2572--2596 & 312 & \href{https://doi.org/10.1109/COMST.2017.2720505}{IEEE/DOI} \\
+17 & Dou et al. (2017) & Systematization of Knowledge: Phishing Email Detection & IEEE Communications Surveys \& Tutorials, 19(4), 2572--2596 & 312 & \href{https://ieeexplore.ieee.org/document/8036198}{IEEE Xplore} \\
 \hline
 
 18 & Khonji, Iraqi \& Jones (2013) & Phishing Detection: A Literature Survey & IEEE Communications Surveys \& Tutorials, 15(4), 2091--2121 & 1,850+ & \href{https://ieeexplore.ieee.org/document/6497928}{IEEE Xplore} \\
