Fix refs #6 and #8 with direct PDF links

--- a/references_table.tex
+++ b/references_table.tex
@@ -86,13 +86,13 @@ This document consolidates all references used in the scientific review document
 5 & Asmar \& Tuqan (2024) & Integrating machine learning for sustaining cybersecurity in digital banks & Heliyon, September 2024 & -- & \href{https://www.sciencedirect.com/science/article/pii/S240584402413602X}{ScienceDirect} \\
 \hline
 
-6 & Ayoola, Ugoaghalam \& Idoko (2024) & Effectiveness of social engineering awareness training in mitigating spear phishing risks in financial institutions & Int. J. of Applied Research in Social Sciences, 6(10) & 50 & \href{https://www.researchgate.net/publication/384461221}{ResearchGate} \\
+6 & Ayoola, Ugoaghalam \& Idoko (2024) & Effectiveness of social engineering awareness training in mitigating spear phishing risks in financial institutions & Int. J. of Applied Research in Social Sciences, 6(10) & 50 & \href{https://www.researchgate.net/profile/Idoko-Idoko-3/publication/384461221_Effectiveness_of_social_engineering_awareness_training_in_mitigating_spear_phishing_risks_in_financial_institutions_from_a_cybersecurity_perspective/links/676cdbd0c1b0135465f543df/Effectiveness-of-social-engineering-awareness-training-in-mitigating-spear-phishing-risks-in-financial-institutions-from-a-cybersecurity-perspective.pdf}{PDF} \\
 \hline
 
 7 & Chanda, Vafaei-Zadeh \& Nikbin (2025) & Assessing cybersecurity awareness among bank employees: A multi-stage analytical approach & Computers \& Security, February 2025 & -- & \href{https://www.sciencedirect.com/science/article/pii/S0167404824005145}{ScienceDirect} \\
 \hline
 
-8 & Debnath, Sharmin \& Hassan (2025) & Securing Financial Information in the Digital Age: Cybersecurity Threat Evaluation in Banking Systems & Journal of Ecohumanism & -- & \href{https://www.researchgate.net/publication/390494969}{ResearchGate} \\
+8 & Debnath, Sharmin \& Hassan (2025) & Securing Financial Information in the Digital Age: Cybersecurity Threat Evaluation in Banking Systems & Journal of Ecohumanism & -- & \href{https://www.researchgate.net/profile/Sadia-Sharmin-24/publication/390494969_Securing_Financial_Information_in_the_Digital_Age_An_Overview_of_Cybersecurity_Threat_Evaluation_in_Banking_Systems/links/67f0a76776d4923a1af70bc5/Securing-Financial-Information-in-the-Digital-Age-An-Overview-of-Cybersecurity-Threat-Evaluation-in-Banking-Systems.pdf}{PDF} \\
 \hline
 
 9 & Gulyás \& Kiss (2023) & Impact of cyber-attacks on the financial institutions & Procedia Computer Science, 219, 84--90 & 116 & \href{https://www.sciencedirect.com/science/article/pii/S1877050923002752}{ScienceDirect} \\
